[package]
name = "spark-rs"
description =  "Sparklines for the console"
version = "0.6.3"
authors = ["Erwin Kroon <erwin@k3n.nl>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
itertools = "^0.10.5"
clap = "^4.2.4"
sparklines = "^0.2.1"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.2"
